@@ -6,6 +6,8 @@ Version 0.4.0
 
 - The vcov() method for aggregate indexes is now much faster. The options for parallel computing have been removed, as they're unlikely to be useful for even large indexes.
 
+- The head() and tail() methods for index objects now return an index objects instead of a matrix.
+
 # New features
 
 - Added an as.matrix() method for 'pias' objects. This makes it easy to aggregate a price index as a matrix operation; just matrix multiply the aggregation matrix with the elemental indexes.
